emx2/ssr-catalogue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssr-catalogue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ssr-catalogue
  template:
    metadata:
      labels:
        app: ssr-catalogue
    spec:
      containers:
      - name: ssr-catalogue
        image: molgenis/ssr-catalogue
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ssr-catalogue
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: ssr-catalogue
