emx2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cancerimage-ingress-1
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - catalogue.eucaim.cancerimage.eu
    secretName: catalogue.eucaim.cancerimage.eu

  rules:
    - host: catalogue.eucaim.cancerimage.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emx2 
                port:
                  number: 8080
